--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/guacamole.html">Guacamole</a>
+    <ul>
+        <li><a href="recipes/guacamole.html">Guacamole</a></li>
+        <li><a href="recipes/chickpeas.html">Chickpeas</a></li>
+        <li><a href="recipes/frittata.html">Zucchini-Frittata</a></li>
+    </ul>
 </body>
-</html>
+</html>  
