--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -8,5 +8,28 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Guacamole</h1>
+    <img src="images/guacamole.jpg" alt="Guacamole with onions and tomatoes topped with chips" width="400">
+    <h2>Description</h2>
+    <p>Guacamole is an avocado-based dip or spread that originated in Mexico. It's typically made with mashed avocado and lime juice, then seasoned with salt and cilantro. 
+        Guacamole often contains tomatoes and onions.
+    </p>
+    <p>Serve this guacamole with tortilla chips, crackers, or fresh vegetables for dipping. You can also spread it on toast, use it as a hamburger or sandwich topping, or dollop it onto a baked potato.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3 avocados - peeled, pitted, and mashed</li>
+        <li>1 lime, juiced</li>
+        <li>1 teaspoon salt</li>
+        <li>2 roma (plum) tomatoes, diced</li>
+        <li>½ cup diced onion</li>
+        <li>3 tablespoons chopped fresh cilantro</li>
+        <li>1 teaspoon minced garlic</li>
+        <li>1 pinch ground cayenne pepper (Optional)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Mash avocados, lime juice, and salt together in a medium bowl; mix in tomatoes, onion, cilantro, and garlic.</li>
+        <li>Stir in cayenne pepper. Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</li>
+    </ol>
 </body>
 </html>
